--- a/config/client.toml
+++ b/config/client.toml
@@ -10,6 +10,6 @@ keyring-backend = "os"
 # CLI output format (text|json)
 output = "text"
 # <host>:<port> to CometBFT RPC interface for this chain
-node = "0.0.0.0:26657"
+node = "http://localhost:26657"
 # Transaction broadcasting mode (sync|async)
 broadcast-mode = "sync"
